test/lattests/bad/useForVariableOutsideVar.lat
int[] foo() { return new int[]; }

int main() {
    for (int a : foo()) {}

    printInt(a);

    return 0;
}